Fixed spacing around see more and divider

--- a/my-app/src/Components/Home/Home.css
+++ b/my-app/src/Components/Home/Home.css
@@ -14,5 +14,5 @@
     color: rgba(208, 208, 208, 0.6);
     height: 2px;
     width: 780px;
-    margin: auto;
+    margin: 10px auto;
 }
